[package]
name = "benchrs"
version = "0.1.2"
authors = ["Arkaitz Jimenez <arkaitzj@gmail.com>"]
edition = "2018"
description = "Apache Benchmark style http bench tool written in async rust"
license = "Apache-2.0"
repository = "https://github.com/arkaitzj/benchrs"

[dependencies]
smol = "^0.1.10"
url = "^2.1.1"
futures = "^0.3.5"
anyhow = "^1.0.31"
async-native-tls = "^0.3.3"
num_cpus = "^1.13.0"
piper = "^0.1.2"
httparse = "^1.3.4"
clap = "^2.33.1"
log = "^0.4.8"
simplelog = "^0.8.0"


[profile.release]
lto = true
