[package]
name = "benchrs"
version = "0.1.9-alpha.0"
authors = ["Arkaitz Jimenez <arkaitzj@gmail.com>"]
edition = "2018"
description = "Apache Benchmark style http bench tool written in async rust"
license = "Apache-2.0"
repository = "https://github.com/arkaitzj/benchrs"
readme = "README.md"

[dependencies]
smol = "^0.1.18"
url = "^2.2.1"
futures = "^0.3.5"
anyhow = "^1.0.38"
async-native-tls = "^0.3.3"
native-tls = "^0.2.7"
num_cpus = "^1.13.0"
piper = "^0.1.3"
httparse = "^1.3.4"
clap = "^2.33.1"
log = "^0.4.8"
simplelog = "^0.9.0"


[dev-dependencies]
flate2 = "1.0"
mktemp = "^0.4.0"
galvanic-test = "^0.2.0"

[profile.release]
lto = true
