[package]
name = "benchrs"
version = "0.1.11-alpha.0"
authors = ["Arkaitz Jimenez <arkaitzj@gmail.com>"]
edition = "2018"
description = "Apache Benchmark style http bench tool written in async rust"
license = "Apache-2.0"
repository = "https://github.com/arkaitzj/benchrs"
readme = "README.md"

[dependencies]
smol = "1.2.5"
url = "2.2.2"
futures = "0.3.24"
anyhow = "1.0.62"
async-native-tls = "0.4.0"
native-tls = "0.2.10"
num_cpus = "1.13.1"
httparse = "1.7.1"
clap = "4.0.9"
log = "0.4.17"
simplelog = "0.12.0"
time = "0.3.14"
async-channel = "1.7.1"


[dev-dependencies]
flate2 = "1.0.24"
mktemp = "0.4.1"
galvanic-test = "0.2.0"

[profile.release]
lto = true
